Update the template to HTML5 and Bootstrap

--- a/tpls/xhtml-template.html
+++ b/tpls/xhtml-template.html
@@ -1,21 +1,21 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
+<!doctype html>
+<html lang="en">
 	<head>
 		<title>{title}</title>
 
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 		{link}
 
+		<link href="css/bootstrap.min.css" rel="stylesheet" />
 		{css}
 		{js}
-
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	</head>
-
-<body {body_props}>
-
-<div>
-{body}
-</div>
-
-</body>
+	<body {body_props}>
+		<div class="">
+			{body}
+		</div>
+	</body>
 </html>
+
